Fixed some changes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     arrow_drop_down
                 </span>
             </a>
-            <a href="">STORE</a>
+            <a href="Store.html">STORE</a>
             <a href="">MEMBERSHIP</a>
         </div>
         <div>
